--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="main.css">
   <title>HTML Portfolio</title>
 </head>
+<header>
+  <h1>Denise Celestino</h1>
+
+</header>
 <body>
 
   Welcome to the HTML Portfolio Project
